Fix autocomplete getting hidden under edit dialog

--- a/app/assets/stylesheets/common/jquery_ui_custom.css.scss
+++ b/app/assets/stylesheets/common/jquery_ui_custom.css.scss
@@ -1,6 +1,7 @@
 div.ui-dialog {
   overflow: visible;
   font-size: 1em;
+  z-index: 999 !important;
 
   ul {
     margin-left: 1em;
